adjust label language for home hero and search

--- a/apps/templates/_home/_hero.html
+++ b/apps/templates/_home/_hero.html
@@ -2,6 +2,8 @@
 <div class="uk-container uk-text-center hero">
     <h1 class="uk-heading-primary" style="color: white; font-size: 3rem; font-weight: bold; margin-bottom: 1rem;">
         {{ request.site.name }}</h1>
+    <div class="uk-text-large">Read, remark, and research with Readux, 
+        an interactive digital reading platform and research tool.</div>
     <p class="uk-text-lead" style="color: white; ">{{ page.tagline|richtext }}</p>
     {% include "snippets/_search_box.html" %}
 </div>
