--- a/apps/templates/snippets/_search_box.html
+++ b/apps/templates/snippets/_search_box.html
@@ -1,6 +1,6 @@
 <div class="search-bar">
   <form action="{% url 'search' %}" method="get">
-    <input class="uk-input" type="text" name="q" id="q" placeholder="Search...">
+    <input class="uk-input" type="text" name="q" id="q" placeholder="Search for a volume in the library">
     <button type="submit" class="uk-button">
         Search
     </button>
