--- a/apps/templates/_home/_featured_collections.html
+++ b/apps/templates/_home/_featured_collections.html
@@ -13,7 +13,7 @@
                     <div class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m">
                         {% for collection in page.featured_collections.all|order_by:page.featured_collections_sort_order %}
                             <div class="uk-panel">
-                                <a href="#" class="volume-item">
+                                <a href="#" class="grid-item">
                                     <img src="/media/{{ collection.thumbnail }}" alt="{{ collection.label }}">
                                     <h2>{{ collection.label }}</h2>
                                 </a>
