--- a/apps/templates/cms/collections_page.html
+++ b/apps/templates/cms/collections_page.html
@@ -1,97 +1,76 @@
 {% extends "base.html" %}
 {% load wagtailcore_tags %}
+{% load sass_tags %}
 
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
+<link type="text/css" href="{% sass_src 'css/readux2/main.scss' %}" rel="stylesheet">
+<link type="text/css" href="{% sass_src 'css/readux2/login.scss' %}" rel="stylesheet">
+<link type="text/css" href="{% sass_src 'css/readux2/menu-inverse.scss' %}" rel="stylesheet">
+<link type="text/css" href="{% sass_src 'css/readux2/static.scss' %}" rel="stylesheet">
 
-<h1>WARNING </h1>
+{% include '_home/_nav.html' %}
 
-<div class="rx-title-container">
-  <ul class="rx-breadcrumb uk-text-truncate">
-    <li class="rx-breadcrumb-item"><a href="/" alt="Home">Home</a></li>
-    <li class="rx-breadcrumb-item">Collections</li>
+<div class="uk-container">
+  <!-- Breadcrumb -->
+  <ul class="breadcrumb uk-margin-small-top">
+    <li><a href="/">Home</a></li>
+    <li>{{ page.page_title|default:page.title }}</li>
   </ul>
+  <!-- End -->
 
-  <div><h2 class="rx-title" style="margin-bottom:0;line-height: 1.5;">{{ page.page_title }}</div>
-  <div class="rx-title-tagline">{{page.tagline}}</div>
-</div>
+  <!-- Page title & text lead -->
+  <h1 class="page-title uk-margin-top uk-margin-remove-bottom">{{ page.page_title|default:page.title }}</h1>
+  <p class="page-text-lead">{{ page.tagline }}</p>
+  <p class="page-text-lead uk-margin-small-top">{{ page.paragraph }}</p>
+  <!-- End -->
 
-<div class="rx-head-container">
-  <p>{{ page.paragraph }}</p>
-</div>
+  {% include "snippets/_collections_page_information.html" %}
 
-
-{% if page.layout == 'Banner' %}
-<div class="rx-banner-layout">
-  {% for collection in page.collections %}
-  <div class="rx-volume-in-banner">
-    <a class="nav-link" href="{% url 'collection' collection.pid %}">
-    <div class="rx-banner-image-container"><img src="/media/{{collection.header}}" alt="Banner image for collection {{collection.label}}"></div>
-    <div class="rx-banner-text-container">
-      <div class="rx-title-tagline rx-title-tagline-banner">{{collection.manifests.all|length}} volume{{collection.manifests.all|length|pluralize}}</div>
-      <div class="rx-collection-title rx-collection-title-banner">{{ collection.label }}</div>
-    </div>
-    </a>
-  </div>
-  {% endfor %}
-</div>
-{% endif %}
-
-
-{% if page.layout == 'Grid' %}
-<div class="rx-grid">
-{% for collection in page.collections %}
-<article class="rx-grid-layout">
-  <a class="nav-link" href="{% url 'collection' collection.pid %}">
-  <div class="rx-volume-in-grid">
-    <div class="rx-grid-image-container"><img src="/media/{{collection.thumbnail}}"  alt="Thumbnail image for collection {{collection.label}}"></div>
-    <div class="rx-title-tagline uk-margin-small-top">{{collection.manifests.all|length}} volume{{collection.manifests.all|length|pluralize}}</div>
-    <div class="rx-collection-title">{{ collection.label }}</div>
-  </div>
-  </a>
-  <!-- <div class="rx-image-container">
-    <figure style="background-image: url('/media/{{collection.thumbnail}}'"></figure>
-    <p>{{ collection.label }}<br/>
-      {{collection.manifests.all|length}} volume{{collection.manifests.all|length|pluralize}}</p>
-  </div>
-    <div class="rx-card-image-container">
-      <img src="/media/{{collection.thumbnail}}" alt="Thumbnail image for collection {{collection.label}}" />
-      <div class="rx-top-left">
-    </div>
-  </div> -->
-</article>
-{% endfor %}
-</div>
-{% endif %}
-
-
-{% if page.layout == 'List' %}
-<div class="collectionswrapper uk-padding-remove-left">
-  <div class="uk-grid-match uk-child-width-expand@s uk-grid-large" uk-grid>
+  {% if page.layout == 'Grid' %}
+  <!-- Collection Grid -->
+  <div class="uk-grid-match uk-child-width-1-4@m uk-margin-large-bottom" uk-grid>
     {% for collection in page.collections %}
-    <div class="uk-width-1-2@m uk-grid-medium">
-      <div class=" uk-width-1-4@m">
-        <img src="/media/{{collection.thumbnail}}" alt="Banner image for collection {{collection.label}}" />
-      </div>
-      <div class="uk-width-3-4@m" tabindex="0">
-        <a class="nav-link" href="{% url 'collection' collection.pid %}">
-          <h3 class="rx-card-title uk-margin-remove-bottom">{{ collection.label }}</h3>
+        <!-- Collection Item -->
+        <a class="grid-item" href="{% url 'collection' collection.pid %}">
+            <img src="/media/{{collection.thumbnail}}" alt="Thumbnail image for collection {{collection.label}}"> <!-- TODO: Not sure how to correctly insert the onerror handler -->
+            <h2>{{ collection.label|default:"[no title]"|truncatechars:200 }}</h2>
+            {% if collection.manifests.all %}<div class="color-black">{{collection.manifests.all|length}} volume{{collection.manifests.all|length|pluralize}}</div>{% endif %}
+            {{collection.summary|truncatewords_html:50|safe}}
         </a>
-        <div class="rx-title-tagline">
-          {{collection.manifests.all|length}} volume{{collection.manifests.all|length|pluralize}}
-        </div>
-        <p>
-          {{collection.summary|truncatewords_html:50|safe}}
-        </p>
-      </div>
-    </div>
-    {% endfor %}
+      {% empty %}
+        There are no volumes available to browse.
+      {% endfor %}
   </div>
+  {% endif %}
+  
+  {% if page.layout == 'List' %}
+  <!-- Collection List -->
+  <table class="uk-table uk-table-divider list-view-table uk-margin-large-bottom">
+    <thead>
+        <tr>
+            <th>Collection</th>
+            <th>Number of Volumes</th>
+            <th>Summary</th>
+        </tr>
+    </thead>
+    <tbody>
+      {% for collection in page.collections %}
+          <tr class="clickable-row" data-ref="{% url 'collection' collection.pid %}">
+              <td>{{ collection.label|default:"[no title]"|truncatechars:200 }}</td>
+              <td>{{collection.manifests.all|length}} volume{{collection.manifests.all|length|pluralize}}</td>
+              <td class="uk-table-expand">{{collection.summary|truncatewords_html:50|safe}}</td>
+          </tr>
+      {% empty %}
+        There are no volumes available to browse.
+      {% endfor %}
+    </tbody>
+  </table>
+  {% endif %}
+
 </div>
-{% endif %}
 
-{% include "footer.html" %}
-
+{% include '_home/_footer.html' %}
 
 {% endblock content %}
