--- a/apps/templates/search_results.html
+++ b/apps/templates/search_results.html
@@ -68,6 +68,7 @@
     action="{% url 'search' %}"
     method="get"
     accept-charset="utf-8"
+    class="uk-margin-bottom"
 >
 
     <div class="uk-margin-small-top uk-margin-bottom uk-grid uk-grid-small">
@@ -169,4 +170,7 @@
     </div>
 </form>
 </div>
+
+{% include '_home/_footer.html' %}
+
 {% endblock content %}
