adjust styles for static (flat) pages and the collection list view

--- a/apps/static/css/readux2/main.scss
+++ b/apps/static/css/readux2/main.scss
@@ -348,7 +348,7 @@
 .list-item:hover {
     cursor: pointer;
 }
-.clickable-row {
+.clickable-row:hover {
     cursor: pointer;
 }
 .list-view-table th, .list-view-table td {
