--- a/apps/templates/cms/content_page.html
+++ b/apps/templates/cms/content_page.html
@@ -43,33 +43,59 @@
     <div class="uk-width-1-4@m navigation-wrapper">
         <nav class="navigation">
             <ul class="uk-nav uk-nav-default">
-                <li><a href="#features" class="active">Features</a></li>
-                <li><a href="#collections">Collections</a></li>
-                <li><a href="#users-guidelines">Users Guidelines</a></li>
-                <li><a href="#partners">Partners</a></li>
+                <li><a href="#features" data-section="features" class="active">Features</a></li>
+                <li><a href="#collections" data-section="collections">Collections</a></li>
+                <li><a href="#users-guidelines" data-section="users-guidelines">Users Guidelines</a></li>
+                <li><a href="#partners" data-section="partners">Partners</a></li>
             </ul>
         </nav>
     </div>
 
     <!-- Right Column: Content -->
-    <div class="uk-width-expand@m content">
+    <div class="uk-width-expand@m content uk-padding-remove-top">
         <div id="features" class="section">
-            <h2>Features</h2>
+            <h2 class="text-black static-content-title">Features</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et felis nec ipsum dictum faucibus. Cras ultricies arcu sed massa facilisis, eget vulputate nulla viverra.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et felis nec ipsum dictum faucibus. Cras ultricies arcu sed massa facilisis, eget vulputate nulla viverra.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et felis nec ipsum dictum faucibus. Cras ultricies arcu sed massa facilisis, eget vulputate nulla viverra.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et felis nec ipsum dictum faucibus. Cras ultricies arcu sed massa facilisis, eget vulputate nulla viverra.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et felis nec ipsum dictum faucibus. Cras ultricies arcu sed massa facilisis, eget vulputate nulla viverra.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et felis nec ipsum dictum faucibus. Cras ultricies arcu sed massa facilisis, eget vulputate nulla viverra.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et felis nec ipsum dictum faucibus. Cras ultricies arcu sed massa facilisis, eget vulputate nulla viverra.</p>
+        
+        
         </div>
         <div id="collections" class="section">
-            <h2>Collections</h2>
+            <h2 class="text-black static-content-title">Collections</h2>
             <p>Nullam hendrerit, sapien nec ullamcorper viverra, urna erat cursus lectus, a scelerisque mi turpis sit amet arcu. Sed ac justo urna.</p>
+            <p>Nullam hendrerit, sapien nec ullamcorper viverra, urna erat cursus lectus, a scelerisque mi turpis sit amet arcu. Sed ac justo urna.</p>
+            <p>Nullam hendrerit, sapien nec ullamcorper viverra, urna erat cursus lectus, a scelerisque mi turpis sit amet arcu. Sed ac justo urna.</p>
+            <p>Nullam hendrerit, sapien nec ullamcorper viverra, urna erat cursus lectus, a scelerisque mi turpis sit amet arcu. Sed ac justo urna.</p>
+            <p>Nullam hendrerit, sapien nec ullamcorper viverra, urna erat cursus lectus, a scelerisque mi turpis sit amet arcu. Sed ac justo urna.</p>
+            <p>Nullam hendrerit, sapien nec ullamcorper viverra, urna erat cursus lectus, a scelerisque mi turpis sit amet arcu. Sed ac justo urna.</p>
+        
         </div>
         <div id="users-guidelines" class="section">
-            <h2>Users Guidelines</h2>
+            <h2 class="text-black static-content-title">Users Guidelines</h2>
+            <p>Quisque auctor vel nisi at pulvinar. Donec vel dapibus ligula. Vivamus vel malesuada nisl, eget tincidunt lacus. Phasellus tincidunt sit amet nisi id gravida.</p>
+            <p>Quisque auctor vel nisi at pulvinar. Donec vel dapibus ligula. Vivamus vel malesuada nisl, eget tincidunt lacus. Phasellus tincidunt sit amet nisi id gravida.</p>
+            <p>Quisque auctor vel nisi at pulvinar. Donec vel dapibus ligula. Vivamus vel malesuada nisl, eget tincidunt lacus. Phasellus tincidunt sit amet nisi id gravida.</p>
+            <p>Quisque auctor vel nisi at pulvinar. Donec vel dapibus ligula. Vivamus vel malesuada nisl, eget tincidunt lacus. Phasellus tincidunt sit amet nisi id gravida.</p>
+            <p>Quisque auctor vel nisi at pulvinar. Donec vel dapibus ligula. Vivamus vel malesuada nisl, eget tincidunt lacus. Phasellus tincidunt sit amet nisi id gravida.</p>
             <p>Quisque auctor vel nisi at pulvinar. Donec vel dapibus ligula. Vivamus vel malesuada nisl, eget tincidunt lacus. Phasellus tincidunt sit amet nisi id gravida.</p>
         </div>
         <div id="partners" class="section">
-            <h2>Partners</h2>
+            <h2 class="text-black static-content-title">Partners</h2>
+            <p>Praesent vitae quam ac libero cursus dignissim. Fusce nec ligula at nulla ultricies tempor. Cras a urna et tortor bibendum auctor.</p>
+            <p>Praesent vitae quam ac libero cursus dignissim. Fusce nec ligula at nulla ultricies tempor. Cras a urna et tortor bibendum auctor.</p>
+            <p>Praesent vitae quam ac libero cursus dignissim. Fusce nec ligula at nulla ultricies tempor. Cras a urna et tortor bibendum auctor.</p>
+            <p>Praesent vitae quam ac libero cursus dignissim. Fusce nec ligula at nulla ultricies tempor. Cras a urna et tortor bibendum auctor.</p>
+            <p>Praesent vitae quam ac libero cursus dignissim. Fusce nec ligula at nulla ultricies tempor. Cras a urna et tortor bibendum auctor.</p>
+            <p>Praesent vitae quam ac libero cursus dignissim. Fusce nec ligula at nulla ultricies tempor. Cras a urna et tortor bibendum auctor.</p>
             <p>Praesent vitae quam ac libero cursus dignissim. Fusce nec ligula at nulla ultricies tempor. Cras a urna et tortor bibendum auctor.</p>
         </div>
     </div>
+  </div>
 </div>
 
 
@@ -77,9 +103,60 @@
 <p class="lead">{{page.tagline}}</p>
 {% endif %}
 
+{% include '_home/_footer.html' %}
+
 {% include_block page.body %}
 <script>
-
-</script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const navLinks = document.querySelectorAll('.navigation a');
+        const sections = document.querySelectorAll('.section');
+    
+        // Function to remove the 'active' class from all navigation links
+        function removeActiveClass() {
+            navLinks.forEach(link => link.classList.remove('active'));
+        }
+    
+        // Function to add 'active' class to the corresponding navigation link
+        function setActiveLink(sectionId) {
+            removeActiveClass();
+            const activeLink = document.querySelector(`.navigation a[data-section="${sectionId}"]`);
+            if (activeLink) {
+                activeLink.classList.add('active');
+            }
+        }
+    
+        // Smooth scroll to the corresponding section when a navigation link is clicked
+        navLinks.forEach(link => {
+            link.addEventListener('click', function (e) {
+                e.preventDefault();
+                const targetId = this.getAttribute('href').substring(1);
+                const targetSection = document.getElementById(targetId);
+    
+                // Scroll to the target section
+                targetSection.scrollIntoView({ behavior: 'smooth' });
+    
+                // Set the active link manually since we're not scrolling naturally
+                setActiveLink(targetId);
+            });
+        });
+    
+        // Add scroll event listener to highlight the current section in view
+        window.addEventListener('scroll', function () {
+            let currentSection = '';
+            sections.forEach(section => {
+                const sectionTop = section.offsetTop - 50; // Offset for sticky navigation
+                const sectionHeight = section.clientHeight;
+                if (window.scrollY >= sectionTop && window.scrollY < sectionTop + sectionHeight) {
+                    currentSection = section.getAttribute('id');
+                }
+            });
+    
+            if (currentSection) {
+                setActiveLink(currentSection);
+            }
+        });
+    });
+    </script>
+    
 {% endblock %}
 
