--- a/apps/templates/cms/collections_page.html
+++ b/apps/templates/cms/collections_page.html
@@ -31,7 +31,7 @@
   {% if page.layout == 'Grid' %}
   <!-- Collection Grid -->
   <div class="uk-grid-match uk-child-width-1-4@m uk-margin-large-bottom" uk-grid>
-    {% for collection in page.collections %}
+    {% for collection in collections %}
         <!-- Collection Item -->
         <a class="grid-item" href="{% url 'collection' collection.pid %}">
             <img src="/media/{{collection.thumbnail}}" alt="Thumbnail image for collection {{collection.label}}"> <!-- TODO: Not sure how to correctly insert the onerror handler -->
@@ -40,12 +40,10 @@
             {{collection.summary|truncatewords_html:50|safe}}
         </a>
       {% empty %}
-        There are no volumes available to browse.
+        There are no collections available to browse.
       {% endfor %}
   </div>
-  {% endif %}
-  
-  {% if page.layout == 'List' %}
+  {% elif page.layout == 'List' %}
   <!-- Collection List -->
   <table class="uk-table uk-table-divider list-view-table uk-margin-large-bottom">
     <thead>
@@ -56,7 +54,7 @@
         </tr>
     </thead>
     <tbody>
-      {% for collection in page.collections %}
+      {% for collection in collections %}
           <tr class="clickable-row" data-href="{% url 'collection' collection.pid %}">
               <td>{{ collection.label|default:"[no title]"|truncatechars:200 }}</td>
               <td>{{collection.manifests.all|length}} volume{{collection.manifests.all|length|pluralize}}</td>
