minor: "no volumes" --> "no collections"

--- a/apps/templates/cms/collections_page.html
+++ b/apps/templates/cms/collections_page.html
@@ -60,7 +60,7 @@
               <td class="uk-table-expand">{{collection.summary|truncatewords_html:50|safe}}</td>
           </tr>
       {% empty %}
-        There are no volumes available to browse.
+        There are no collections available to browse.
       {% endfor %}
     </tbody>
   </table>
