--- a/apps/templates/collection.html
+++ b/apps/templates/collection.html
@@ -5,84 +5,9 @@
 {% load user_annotation_count %}
 {% block content %}
 <link type="text/css" href="{% sass_src 'css/readux2/menu-inverse.scss' %}" rel="stylesheet">
+<link type="text/css" href="{% sass_src 'css/readux2/collection.scss' %}" rel="stylesheet">
 
 {% include '_home/_nav.html' %}
-<style>
-  
-  .full-width-bg {
-            background-image: url('https://ukmars.org/ukmars/wp-content/uploads/2020/07/pexels-photo-507410.jpeg');
-            background-size: cover;
-            background-position: center;
-            position: relative;
-            height: 50vh;
-            color: white;
-        }
-        .overlay {
-            background: linear-gradient(to right, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 100%);
-            height: 50vh;
-            width: 33%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            padding: 50px;
-            box-sizing: border-box;
-            min-height: 0;
-        }
-        .overlay h1 {
-            font-size: 2rem; /* Reduced title size */
-            margin-bottom: 15px;
-        }
-        .overlay p {
-            font-size: 1rem; /* Adjusted font size */
-            line-height: 1.5; /* Reduced line-height */
-        }
-        .description-button {
-            margin-top: 20px;
-            background-color: #f0506e; /* Removed gradient background */
-            border: none;
-            color: white;
-        }
-        .uk-button-default {
-            background-color: #222; /* Removed gradient background */
-            border: none;
-            color: white;
-        }
-
-        .modal-bg {
-            background-image: url('https://ukmars.org/ukmars/wp-content/uploads/2020/07/pexels-photo-507410.jpeg');
-            background-size: cover;
-            background-position: center;
-            position: relative;
-            height: 100%;
-            width: 100%;
-            color: white;
-        }
-        .modal-overlay {
-            background: rgba(0, 0, 0, 0.6); /* Dark overlay */
-            height: 100%;
-            width: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            padding: 50px;
-            box-sizing: border-box;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .modal-overlay h2,
-        .modal-overlay p {
-            position: relative;
-            z-index: 1;
-        }
-        .uk-modal-close-full {
-            color: white; /* Set the close button color to white */
-            background: none; /* Remove the background */
-            border: none; /* Remove any borders */
-        }
-</style>
-
-
 
 <div class="uk-container">
 <!-- Breadcrumb -->
@@ -127,9 +52,6 @@
 </div>
 
 <div>
-
-  {% include "_home/_featured_collections.html" %}
-
 
   <header class="page-header" id="page-bg">
     <div class="container">
